--- a/Website.css
+++ b/Website.css
@@ -2,21 +2,21 @@
 /* CSS Document */
 body {
 	font-family: Verdana, sans-serif;
-	color: #242626;
-	background-color: rgb(70, 119, 136);
+	color: teal;
+	background-color: ivory;
 
 }
 
 h1 {
     text-align: center;
-    border: 2px solid powderblue;
+    border: 8px solid coral;
     padding: 30px;
-    margin: 100px;
+    margin: 60px;
 }
 
 h2 {
-	color: rgb(28, 222, 161);
-    margin: 20px;
-    border-bottom-style: dotted;
-
+    text-align: center;
+    border: 4px solid coral;
+    padding: 15px;
+    margin: 30px;
 }
