--- a/Website.css
+++ b/Website.css
@@ -11,12 +11,36 @@ h1 {
     text-align: center;
     border: 8px solid coral;
     padding: 30px;
-    margin: 60px;
+    margin: 30px;
 }
 
-h2 {
+h6 {
     text-align: center;
     border: 4px solid coral;
     padding: 15px;
-    margin: 30px;
+    margin: 15px auto;
+}
+
+.collapsible {
+    background-color: white;
+    font-family: Verdana, sans-serif;
+    color: teal;
+    text-align: center;
+    cursor: pointer;
+    padding: 15px;
+    margin: 15px auto;
+    width: 100%;
+    max-width: 800px;
+    box-sizing: border-box;
+    border: 4px solid coral;
+    font-size: 24px;
+    font-weight: bold;
+}
+
+.content {
+  display: none;
+}
+
+.active, .collapsible:hover {
+  background-color: coral;
 }
