--- a/Website.css
+++ b/Website.css
@@ -3,22 +3,51 @@
 body {
 	font-family: Verdana, sans-serif;
     color: rgb(0, 160, 160);
-	background-color: ivory;
+	background-color: white;
+    padding: 12px;
+    margin: 12px auto;
+    margin-left: 24px;
+    margin-right: 24px;
 
 }
 
 h1 {
-    text-align: center;
-    border: 8px solid coral;
-    padding: 30px;
-    margin: 30px;
-}
-
-h6 {
+    background-color: whitesmoke;
     text-align: center;
     border: 4px solid coral;
-    padding: 15px;
-    margin: 15px auto;
+    padding: 12px;
+    margin: 12px auto;
+    
+    cursor: pointer;
+    width: 100%;
+    max-width: 1200px;
+    box-sizing: border-box;
+}
+
+
+
+h6 {
+    background-color: whitesmoke;
+    padding: 30px;
+    text-align: center;
+    border: 4px solid coral;
+    padding: 12px;
+    margin: 12px auto;
+    max-width: 1200px;
+    box-sizing: border-box;
+
+}
+
+footer {
+    text-align: center;
+    font-size: 14px;
+    color: slategray;
+
+    padding: 12px;
+    margin: 12px auto;
+    margin-top: 40px;
+    border-top: 1px solid slategray;
+    max-width: 1000px;
 }
 
 .collapsible {
@@ -27,8 +56,8 @@ h6 {
     color: rgb(0, 160, 160);
     text-align: center;
     cursor: pointer;
-    padding: 15px;
-    margin: 15px auto;
+    padding: 12px;
+    margin: 12px auto;
     width: 100%;
     max-width: 800px;
     box-sizing: border-box;
@@ -38,9 +67,9 @@ h6 {
 }
 
 .content {
-  display: none;
+    display: none;
 }
 
 .active, .collapsible:hover {
-  background-color: coral;
+    background-color: coral;
 }
