--- a/Website.css
+++ b/Website.css
@@ -1,84 +1,135 @@
 @charset "UTF-8";
 /* CSS Document */
 body {
-	font-family: Verdana, sans-serif;
-    color: rgb(0, 160, 160);
-	background-color: white;
-    padding: 12px;
-    margin: 12px auto;
-    margin-left: 24px;
-    margin-right: 24px;
-
+  font-family: Verdana, sans-serif;
+  color: rgb(0, 160, 160);
+  background-color: white;
+  padding: 12px;
+  margin: 12px auto;
+  margin-left: 24px;
+  margin-right: 24px;
 }
 
 h1 {
-    background-color: whitesmoke;
-    text-align: center;
-    border: 4px solid coral;
-    padding: 12px;
-    margin: 12px auto;
-    
-    cursor: pointer;
-    width: 100%;
-    max-width: 1200px;
-    box-sizing: border-box;
+  background-color: whitesmoke;
+  text-align: center;
+  border: 4px solid coral;
+  padding: 12px;
+  margin: 12px auto;
+
+  cursor: pointer;
+  width: 100%;
+  max-width: 1200px;
+  box-sizing: border-box;
 }
 
-
-
 h6 {
-    background-color: whitesmoke;
-    padding: 30px;
-    text-align: center;
-    border: 4px solid coral;
-    padding: 12px;
-    margin: 12px auto;
-    max-width: 1200px;
-    box-sizing: border-box;
-
+  background-color: whitesmoke;
+  padding: 30px;
+  text-align: center;
+  border: 4px solid coral;
+  padding: 12px;
+  margin: 38px auto;
+  margin-bottom: 64px;
+  max-width: 1200px;
+  box-sizing: border-box;
 }
 
 footer {
-    text-align: center;
-    font-size: 14px;
-    color: slategray;
+  text-align: center;
+  font-size: 14px;
+  color: slategray;
 
-    padding: 12px;
-    margin: 12px auto;
-    margin-top: 40px;
-    border-top: 1px solid slategray;
-    max-width: 1000px;
+  padding: 12px;
+  margin: 12px auto;
+  margin-top: 40px;
+  border-top: 1px solid slategray;
+  max-width: 1000px;
 }
 
 .collapsible {
-    background-color: white;
-    font-family: Verdana, sans-serif;
-    color: rgb(0, 160, 160);
-    text-align: center;
-    cursor: pointer;
-    padding: 12px;
-    margin: 12px auto;
-    width: 100%;
-    max-width: 800px;
-    box-sizing: border-box;
-    border: 4px solid coral;
-    font-size: 24px;
-    font-weight: bold;
+  background-color: white;
+  font-family: Verdana, sans-serif;
+  color: rgb(0, 160, 160);
+  text-align: center;
+  cursor: pointer;
+  padding: 48px;
+  margin: 12px auto;
+  width: 100%;
+  max-width: 800px;
+  box-sizing: border-box;
+  border: 4px solid coral;
+  font-size: 24px;
+  font-weight: bold;
 }
 
 .content {
-    background-color: white;
-    display: none;
-    text-align: start;
-    font-size: 14px;
-    color: slategray;
-    padding: 12px;
-    margin: 12px auto;
-    max-width: 800px;
-    box-sizing: border-box;
-    border: 1px solid slategray;
+  background-color: white;
+  display: none;
+  text-align: start;
+  font-size: 14px;
+  color: slategray;
+  padding: 12px;
+  margin: 12px auto;
+  max-width: 800px;
+  box-sizing: border-box;
+  border: 1px solid slategray;
 }
 
-.active, .collapsible:hover {
-    background-color: coral;
+.active,
+.collapsible:hover {
+  background-color: coral;
+}
+
+.funny {
+  font-size: 12px;
+    font-weight: bold;
+  color: slategray;
+  bottom: auto;
+  font-family: "Comic Sans MS", "Comic Sans", cursive;
+  
+}
+
+
+.funny:hover {
+  animation: shake 0.5s;
+  animation-iteration-count: infinite;
+}
+
+@keyframes shake {
+  0% {
+    transform: translate(1px, 1px) rotate(0deg);
+  }
+  10% {
+    transform: translate(-1px, -2px) rotate(-1deg);
+  }
+  20% {
+    transform: translate(-3px, 0px) rotate(1deg);
+  }
+  30% {
+    transform: translate(3px, 2px) rotate(0deg);
+  }
+  40% {
+    transform: translate(1px, -1px) rotate(1deg);
+  }
+  50% {
+    transform: translate(-1px, 2px) rotate(-1deg);
+  }
+  60% {
+    transform: translate(-3px, 1px) rotate(0deg);
+  }
+  70% {
+    transform: translate(3px, 1px) rotate(-1deg);
+  }
+  80% {
+    transform: translate(-1px, -1px) rotate(1deg);
+  }
+  90% {
+    transform: translate(1px, 2px) rotate(0deg);
+  }
+  100% {
+    transform: translate(1px, -2px) rotate(-1deg);
+  }
+
+
 }
